// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`webhook fixture snapshots home-assistant-core issue_comment.created.command-add-label 1`] = `
[
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Platinum integration — needs approval from a code owner before merging.",
      "status": "fail",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "needs-more-information",
      "Quality Scale: platinum",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core issue_comment.created.command-close-rejected 1`] = `undefined`;

exports[`webhook fixture snapshots home-assistant-core issue_comment.created.command-close 1`] = `
[
  {
    "state": "closed",
    "type": "setState",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core issue_comment.created.regular-comment 1`] = `[]`;

exports[`webhook fixture snapshots home-assistant-core issues.labeled.integration-hue 1`] = `
[
  {
    "assignees": [
      "balloob",
    ],
    "type": "addAssignees",
  },
  {
    "body": "Hey there @balloob, mind taking a look at this issue as it has been labeled with an integration (\`hue\`) you are listed as a [code owner](https://github.com/home-assistant/core/blob/HEAD/CODEOWNERS#L1) for? Thanks!",
    "type": "comment",
  },
  {
    "section": {
      "id": "integration-links",
      "message": "- \`hue\`: [documentation](https://www.home-assistant.io/integrations/hue) · [source](https://github.com/home-assistant/core/tree/dev/homeassistant/components/hue) · [known issues](https://github.com/home-assistant/core/issues?q=label%3A%22integration%3A%20hue%22)",
      "status": "info",
      "title": "Integration links",
    },
    "type": "dashboardSection",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core issues.opened 1`] = `[]`;

exports[`webhook fixture snapshots home-assistant-core pull_request.closed 1`] = `[]`;

exports[`webhook fixture snapshots home-assistant-core pull_request.edited.body-updated 1`] = `
[
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`bugfix\`, \`code-quality\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "bugfix",
      "code-quality",
      "has-tests",
      "small-pr",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.labeled.blocking-awaiting-frontend 1`] = `
[
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "blocking-label-awaiting-frontend",
      "message": "This PR is awaiting changes to the frontend",
      "status": "fail",
      "title": "Blocking: awaiting-frontend",
    },
    "type": "dashboardSection",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.labeled.integration-hue 1`] = `
[
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "assignees": [
      "balloob",
    ],
    "type": "addAssignees",
  },
  {
    "body": "Hey there @balloob, mind taking a look at this pull request as it has been labeled with an integration (\`hue\`) you are listed as a [code owner](https://github.com/home-assistant/core/blob/HEAD/CODEOWNERS#L1) for? Thanks!",
    "type": "comment",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Platinum integration — needs approval from a code owner before merging.",
      "status": "fail",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "Quality Scale: platinum",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.opened.all-change-types 1`] = `
[
  {
    "section": {
      "id": "merge-conflict",
      "message": "No merge conflicts.",
      "status": "pass",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`bugfix\`, \`dependency\`, \`new-integration\`, \`new-feature\`, \`deprecation\`, \`breaking-change\`, \`code-quality\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Validation passed.",
      "status": "pass",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Missing documentation PR",
      "status": "fail",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "integration: awesome",
      "Quality Scale: bronze",
      "bugfix",
      "dependency",
      "new-integration",
      "new-feature",
      "deprecation",
      "breaking-change",
      "code-quality",
      "has-tests",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.opened.bugfix-single-integration 1`] = `
[
  {
    "section": {
      "id": "merge-conflict",
      "message": "No merge conflicts.",
      "status": "pass",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`bugfix\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "assignees": [
      "balloob",
    ],
    "type": "addAssignees",
  },
  {
    "body": "Hey there @balloob, mind taking a look at this pull request as it has been labeled with an integration (\`hue\`) you are listed as a [code owner](https://github.com/home-assistant/core/blob/HEAD/CODEOWNERS#L1) for? Thanks!",
    "type": "comment",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Platinum integration — needs approval from a code owner before merging.",
      "status": "fail",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "integration: hue",
      "Top 50",
      "Top 100",
      "Top 200",
      "Quality Scale: platinum",
      "bugfix",
      "has-tests",
      "small-pr",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.opened.dependency-bump 1`] = `
[
  {
    "section": {
      "id": "merge-conflict",
      "message": "No merge conflicts.",
      "status": "pass",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`dependency\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "dependency",
      "small-pr",
      "metadata-only",
      "dependency-bump",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.opened.new-integration-no-docs 1`] = `
[
  {
    "section": {
      "id": "merge-conflict",
      "message": "No merge conflicts.",
      "status": "pass",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`new-integration\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Validation passed.",
      "status": "pass",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Missing documentation PR",
      "status": "fail",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "integration: awesome",
      "Quality Scale: bronze",
      "new-integration",
      "has-tests",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.ready_for_review 1`] = `
[
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.reopened 1`] = `
[
  {
    "section": {
      "id": "merge-conflict",
      "message": "No merge conflicts.",
      "status": "pass",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Platinum integration — needs approval from a code owner before merging.",
      "status": "fail",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "Quality Scale: platinum",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.synchronize.merge-conflict 1`] = `
[
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-conflict",
      "message": "Branch has merge conflicts with the base.",
      "status": "fail",
      "title": "Merge conflicts",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "merge-target",
      "message": "This PR targets \`dev\`.",
      "status": "pass",
      "title": "Merge target",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "type-of-change",
      "message": "Type of change: \`bugfix\`",
      "status": "pass",
      "title": "Type of change",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "blocking-label-awaiting-frontend",
      "message": "\`awaiting-frontend\` label not set — nothing to block.",
      "status": "skip",
      "title": "Blocking: awaiting-frontend",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Platinum integration — needs approval from a code owner before merging.",
      "status": "fail",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "labels": [
      "Top 50",
      "Top 100",
      "Top 200",
      "Quality Scale: platinum",
      "bugfix",
      "small-pr",
    ],
    "type": "addLabels",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request.unlabeled.awaiting-frontend 1`] = `
[
  {
    "section": {
      "id": "new-integration-validation",
      "message": "Not a new-integration PR.",
      "status": "skip",
      "title": "New integration validation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "docs-missing",
      "message": "Not a new integration or platform — no documentation PR required.",
      "status": "skip",
      "title": "Documentation",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "blocking-label-awaiting-frontend",
      "message": "\`awaiting-frontend\` label not set — nothing to block.",
      "status": "skip",
      "title": "Blocking: awaiting-frontend",
    },
    "type": "dashboardSection",
  },
]
`;

exports[`webhook fixture snapshots home-assistant-core pull_request_review.submitted.comment 1`] = `
[
  {
    "section": {
      "id": "review-comments",
      "message": "No inline review comments yet.",
      "status": "skip",
      "title": "Review comments",
    },
    "type": "dashboardSection",
  },
  {
    "section": {
      "id": "code-owner-approval",
      "message": "Not a platinum integration — no code-owner approval required.",
      "status": "skip",
      "title": "Code owner approval",
    },
    "type": "dashboardSection",
  },
]
`;
